--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth/prisma-adapter": "^2.7.2",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
