--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
@@ -42,6 +43,7 @@
     "@trpc/server": "^11.0.0-rc.446",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
@@ -50,6 +52,7 @@
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.0",
